extends Popup




func _on_one_num_pressed():
	pass # Replace with function body.


func _on_two_num_pressed():
	pass # Replace with function body.


func _on_three_num_pressed():
	pass # Replace with function body.


func _on_four_num_pressed():
	pass # Replace with function body.


func _on_five_num_pressed():
	pass # Replace with function body.


func _on_six_num_pressed():
	pass # Replace with function body.


func _on_seven_num_pressed():
	pass # Replace with function body.


func _on_eight_button_pressed():
	pass # Replace with function body.


func _on_nine_button_pressed():
	pass # Replace with function body.
